// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Sizes Respects block size 1`] = `
<button
  class="btn btn-neutral btn-block"
>
  testing 
  block
   button size
</button>
`;

exports[`Button Sizes Respects lg size 1`] = `
<button
  class="btn btn-neutral btn-lg"
>
  testing 
  lg
   button size
</button>
`;

exports[`Button Sizes Respects md size 1`] = `
<button
  class="btn btn-neutral btn-md"
>
  testing 
  md
   button size
</button>
`;

exports[`Button Sizes Respects sm size 1`] = `
<button
  class="btn btn-neutral btn-sm"
>
  testing 
  sm
   button size
</button>
`;

exports[`Button Sizes Respects wide size 1`] = `
<button
  class="btn btn-neutral btn-wide"
>
  testing 
  wide
   button size
</button>
`;

exports[`Button Sizes Respects xs size 1`] = `
<button
  class="btn btn-neutral btn-xs"
>
  testing 
  xs
   button size
</button>
`;

exports[`Button Variants Respects accent variant 1`] = `
<button
  class="btn btn-accent btn-md"
>
  testing 
  accent
   variant
</button>
`;

exports[`Button Variants Respects error variant 1`] = `
<button
  class="btn btn-error btn-md"
>
  testing 
  error
   variant
</button>
`;

exports[`Button Variants Respects info variant 1`] = `
<button
  class="btn btn-info btn-md"
>
  testing 
  info
   variant
</button>
`;

exports[`Button Variants Respects neutral variant 1`] = `
<button
  class="btn btn-neutral btn-md"
>
  testing 
  neutral
   variant
</button>
`;

exports[`Button Variants Respects primary variant 1`] = `
<button
  class="btn btn-primary btn-md"
>
  testing 
  primary
   variant
</button>
`;

exports[`Button Variants Respects secondary variant 1`] = `
<button
  class="btn btn-secondary btn-md"
>
  testing 
  secondary
   variant
</button>
`;

exports[`Button Variants Respects success variant 1`] = `
<button
  class="btn btn-success btn-md"
>
  testing 
  success
   variant
</button>
`;

exports[`Button Variants Respects warning variant 1`] = `
<button
  class="btn btn-warning btn-md"
>
  testing 
  warning
   variant
</button>
`;
